# rallyplot

./: .buildinfo  .gitignore  CMakeCache.txt  CMakeLists.txt  CNAME  README.md  api_reference.html  cpp_api.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  python_api.html  roadmap.html  search.html  searchindex.js
.github/workflows/: README.md  build_wheels.yml  docs.yml  pr_regression_tests.yml  pypi_regression_tests.yml  regression_tests.yml
_modules/: index.html
_modules/rallyplot/: plotter.html
_sources/: index.md.txt  installation.md.txt
_sources/examples/: example-scatter.md.txt  index.md.txt
_sources/tutorials/: bar_plot.md.txt  customising_plots.md.txt  index.md.txt  scatter_plot.md.txt  subplots.md.txt
distribution/: README.md  build_wheel.py  download_qt.py  fix_macos_paths.sh  quick_build_wheel_script.py  repair_wheel.py  stubFileForDeploy.cpp
docs/: Makefile  make.bat  requirements.txt
docs/source/: api_reference.md  conf.py  cpp_api.rst  installation.md  python_api.rst  roadmap.md
docs/source/cpp/: Doxyfile
docs/source/examples/: example-indicators.md
docs/source/tutorials/: candlestick_plot.md  get_started.md  line_plot.md  linked_subplots.md
examples/: example-indicators.html  example-scatter.html  index.html
src/cpp/: Configs.cpp  Configs.h  Plotter.cpp  Utils.h  rallyplot_global.h  resources.qrc
src/cpp/bindings/: bindings.cpp
src/cpp/charts/: AxesObject.cpp  AxesObject.h  AxisTickLabels.cpp  AxisTickLabels.h  Camera.cpp  Camera.h  CharTextureAtlas.cpp  CharTextureAtlas.h
src/cpp/charts/drawing/: DrawLine.cpp  DrawLine.h
src/cpp/charts/legend/: Legend.cpp  Legend.h
src/cpp/charts/plots/: BarData.cpp  BarData.h  BarPlot.cpp  BarPlot.h  BasePlot.h  BasePlotData.h  CandlestickData.cpp  CandlestickData.h  CandlestickPlot.cpp  CandlestickPlot.h  LineData.cpp  LineData.h  LinePlot.cpp  LinePlot.h  ScatterPlot.cpp  ScatterPlot.h  ScatterplotData.cpp  ScatterplotData.h
src/cpp/charts/shaders/: Program.cpp  Program.h  Shaders.cpp  Shaders.h
src/cpp/charts/shaders/shader_code/: axes_fragment.shader  axes_tick_vertex.shader  axes_vertex.shader  bar_fragment.shader  bar_vertex.shader  candlestick_fragment.shader  candlestick_line_fragment.shader  candlestick_vertex.shader  font_fragment.shader  font_vertex.shader  legend_fragment.shader  legend_text_vertex.shader  legend_vertex.shader  line_geometry.shader  line_vertex.shader  scatterplot_fragment.shader  scatterplot_vertex.shader  simple_line_fragment.shader  simple_line_geomtry.shader  simple_line_vertex.shader
src/cpp/include/: Plotter.h  ToyData.h  UserVector.h
src/cpp/opengl/: VertexArrayObject.cpp  VertexArrayObject.h
src/cpp/structure/: CentralOpenGlWidget.cpp  CentralOpenGlWidget.h  JointPlotData.cpp  JointPlotData.h  LinkedSubplot.cpp  LinkedSubplot.h  PlotWrapperWidget.cpp  PlotWrapperWidget.h  RenderManager.cpp  RenderManager.h  SharedXData.cpp  SharedXData.h  VerticalLabel.h  WindowViewportObject.cpp  WindowViewportObject.h
src/rallyplot/: __init__.py  plotter.py
tests/cpp/: CMakeLists.txt  README.md  main.cpp
tests/python/: README.md  test_dataframe.py  test_full_plotter.py  test_instantiate_plotter.py  test_regression.py  test_simple_plotter.py  test_simple_toy_data.py  test_smoke_dataframe.py  test_toy_data.py
tests/python/regression_data/Linux/: info.txt  test_anti_aliasing_1.npy  test_anti_aliasing_2.npy  test_anti_aliasing_3.npy  test_bar.npy  test_candlestick_1.npy  test_candlestick_2.npy  test_cerr_is_shown_for_repeat_string_1.npy  test_cerr_is_shown_for_repeat_string_2.npy  test_default_init_-1.npy  test_default_init_0.npy  test_hover_value_settings_2.npy  test_hover_value_settings_3.npy  test_legend.npy  test_line.npy  test_line_2.npy  test_linked_subplot_indexes_all_plots.npy  test_linked_subplots.npy  test_multiple_subplots.npy  test_pin_y_axis.npy  test_plot_args.npy  test_set_background_color.npy  test_set_draw_line_settings.npy  test_set_labels_and_titles.npy  test_subplots.npy  test_x_axis_datetime_1.npy  test_x_axis_datetime_2.npy  test_x_axis_string_1.npy  test_x_axis_string_2.npy  test_y_limits.npy
tests/python/regression_data/Windows/: info.txt  test_anti_aliasing_1.npy  test_anti_aliasing_2.npy  test_anti_aliasing_3.npy  test_bar.npy  test_candlestick_1.npy  test_candlestick_2.npy  test_cerr_is_shown_for_repeat_string_1.npy  test_cerr_is_shown_for_repeat_string_2.npy  test_default_init_-1.npy  test_default_init_0.npy  test_default_init_141.npy  test_default_init_37.npy  test_draw_line.npy  test_hover_value_settings_1.npy  test_hover_value_settings_2.npy  test_hover_value_settings_3.npy  test_legend.npy  test_line.npy  test_line_2.npy  test_linked_subplot_indexes_all_plots.npy  test_linked_subplots.npy  test_multiple_subplots.npy  test_pin_y_axis.npy  test_plot_args.npy  test_set_background_color.npy  test_set_camera_settings_2.npy  test_set_crosshair_settings_2.npy  test_set_draw_line_settings.npy  test_set_labels_and_titles.npy  test_subplots.npy  test_x_axis_datetime_1.npy  test_x_axis_datetime_2.npy  test_x_axis_string_1.npy  test_x_axis_string_2.npy  test_y_limits.npy
tutorials/: bar_plot.html  candlestick_plot.html  customising_plots.html  get_started.html  index.html  line_plot.html  linked_subplots.html  scatter_plot.html  subplots.html
